--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BLOG.BBR</title>
     <link rel="stylesheet" href="style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../img/blog.bbr_logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/blog.bbr_logo.png" type="image/x-icon">
   </head>
 <body>
     <header>
@@ -49,24 +49,24 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/barber_1.jpg" class="d-block w-100" alt="...">
+                <img src="img/barber_1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="../img/logo.png" height="35px" width="150px" alt="">
+                  <img src="img/logo.png" height="35px" width="150px" alt="">
                   
                   <p>Seu Blog sobre tudo de cabelo e barba que seu pai não te ensinou!</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/barber_2.jpg" class="d-block w-100" alt="...">
+                <img src="img/barber_2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="../img/logo.png" height="35px" width="150px" alt="">
+                  <img src="img/logo.png" height="35px" width="150px" alt="">
                   <p>Todo conteúdo sobre ideias, dicas e estilos de cortes de cabelo e barba!</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/barber_3.jpg" class="d-block w-100" alt="...">
+                <img src="img/barber_3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="../img/logo.png" height="35px" width="150px" alt="">
+                  <img src="img/logo.png" height="35px" width="150px" alt="">
                   <p>Novidades sobre o conteúdo de barba e cabelo masculino!!!</p>  
                 </div>
               </div>
@@ -86,7 +86,7 @@
 
             <!-- Card 1 -->
             <div class="polaroid">
-              <img src="https://3.bp.blogspot.com/-lbitStAJO2I/W2NLp83yuOI/AAAAAAABJIM/u95t9Mlhw6wSIoBcoXdAlAJGN_A6cNKpwCLcBGAs/s1600/corte-de-cabelo-masculino-degrade%2B%25282%2529.jpg" class="photo" alt="">
+              <a href="html/conteudo.html"><img src="https://3.bp.blogspot.com/-lbitStAJO2I/W2NLp83yuOI/AAAAAAABJIM/u95t9Mlhw6wSIoBcoXdAlAJGN_A6cNKpwCLcBGAs/s1600/corte-de-cabelo-masculino-degrade%2B%25282%2529.jpg" class="photo" alt=""></a>
               <div class="caption">
                 <h2>Cortes de cabelo para 2022.</h2>
                 <p>Veja aqui as tendencias para esse ano e escolha seu novo visual!</p>
