--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- NavBar Bootstrap --> 
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">BLOG BBR</a>
+                <a class="navbar-brand" href="#">BLOG <span>BBR</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -51,23 +51,22 @@
               <div class="carousel-item active">
                 <img src="img/barber_1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="img/logo.png" height="35px" width="150px" alt="">
-                  
-                  <p>Seu Blog sobre tudo de cabelo e barba que seu pai não te ensinou!</p>
+                  <!-- <img src="img/logo.png" height="35px" width="150px" alt="">
+                  <p>Seu Blog sobre tudo de cabelo e barba que seu pai não te ensinou!</p> -->
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/barber_2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="img/logo.png" height="35px" width="150px" alt="">
-                  <p>Todo conteúdo sobre ideias, dicas e estilos de cortes de cabelo e barba!</p>
+                  <!-- <img src="img/logo.png" height="35px" width="150px" alt="">
+                  <p>Todo conteúdo sobre ideias, dicas e estilos de cortes de cabelo e barba!</p> -->
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/barber_3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="img/logo.png" height="35px" width="150px" alt="">
-                  <p>Novidades sobre o conteúdo de barba e cabelo masculino!!!</p>  
+                  <!-- <img src="img/logo.png" height="35px" width="150px" alt="">
+                  <p>Novidades sobre o conteúdo de barba e cabelo masculino!!!</p> -->
                 </div>
               </div>
             </div>
