--- a/html/conteudo.html
+++ b/html/conteudo.html
@@ -56,7 +56,7 @@
             <div class="polaroid">
                 <div class="polaroid-card">
                     <img src="https://3.bp.blogspot.com/-lbitStAJO2I/W2NLp83yuOI/AAAAAAABJIM/u95t9Mlhw6wSIoBcoXdAlAJGN_A6cNKpwCLcBGAs/s1600/corte-de-cabelo-masculino-degrade%2B%25282%2529.jpg" class="polaroid-img" alt="">
-                    <div>
+                    <div class="polaroid-content">
                         <h2>Cortes de cabelo para 2022.</h2>
                         <p>Veja aqui as tendencias para esse ano e escolha seu novo visual!</p>
                     </div>
