--- a/html/conteudo.html
+++ b/html/conteudo.html
@@ -14,14 +14,14 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="#">BLOG <span>BBR</span></a>
+                    <a class="navbar-brand" href="index.html">BLOG <span>BBR</span></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-lg-auto">
                         <li class="nav-item active">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Cabelo</a>
