--- a/html/index.html
+++ b/html/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>BLOG.BBR</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="shortcut icon" href="img/blog.bbr_logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/blog.bbr_logo.png" type="image/x-icon">
   </head>
 <body>
     <header>
       <!-- NavBar Bootstrap --> 
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">BLOG <span>BBR</span></a>
+                <a class="navbar-brand" href="index.html">BLOG <span>BBR</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-lg-auto">
                   <li class="nav-item active">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Cabelo</a>
@@ -49,23 +49,23 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/barber_1.jpg" class="d-block w-100" alt="...">
+                <img src="../img/barber_1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="img/logo.png" height="35px" width="150px" alt="">
+                  <img src="../img/logo.png" height="35px" width="150px" alt="">
                   <p>Seu Blog sobre tudo de cabelo e barba que seu pai não te ensinou!</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/barber_2.jpg" class="d-block w-100" alt="...">
+                <img src="../img/barber_2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="img/logo.png" height="35px" width="150px" alt="">
+                  <img src="../img/logo.png" height="35px" width="150px" alt="">
                   <p>Todo conteúdo sobre ideias, dicas e estilos de cortes de cabelo e barba!</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/barber_3.jpg" class="d-block w-100" alt="...">
+                <img src="../img/barber_3.jpg" class="d-block w-100" alt="..."> 
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="img/logo.png" height="35px" width="150px" alt="">
+                  <img src="../img/logo.png" height="35px" width="150px" alt="">
                   <p>Novidades sobre o conteúdo de barba e cabelo masculino!!!</p>
                 </div>
               </div>
@@ -87,7 +87,7 @@
             <div class="polaroid">
               <!-- img -->
               <div class="polaroid-card">
-                <a href="html/conteudo.html"><img src="https://3.bp.blogspot.com/-lbitStAJO2I/W2NLp83yuOI/AAAAAAABJIM/u95t9Mlhw6wSIoBcoXdAlAJGN_A6cNKpwCLcBGAs/s1600/corte-de-cabelo-masculino-degrade%2B%25282%2529.jpg" class="photo" alt=""></a>
+                <a href="conteudo.html"><img src="https://3.bp.blogspot.com/-lbitStAJO2I/W2NLp83yuOI/AAAAAAABJIM/u95t9Mlhw6wSIoBcoXdAlAJGN_A6cNKpwCLcBGAs/s1600/corte-de-cabelo-masculino-degrade%2B%25282%2529.jpg" class="photo" alt=""></a>
               </div>
               <!-- conteúdo -->
               <div class="caption">
