--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">Barba</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre</a>
+                    <a class="nav-link" href="cadastro.html">Crie uma conta</a>
                   </li>
                 </ul>
               </div>
