--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -42,7 +42,7 @@
 
             <article class="article-content">
 
-                <img src="../img/logo.png" alt="">
+                <img src="../img/Blog_logo_grande.png" alt="LOGO">
 
                 <div>
                     <h2>Bem vindo de volta!</h2>
