--- a/html/index.html
+++ b/html/index.html
@@ -51,21 +51,21 @@
               <div class="carousel-item active">
                 <img src="../img/barber_1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="../img/logo.png" height="35px" width="150px" alt="">
+                  <img src="../img/BLOG_BBR_teste.png" height="60px" alt="">
                   <p>Seu Blog sobre tudo de cabelo e barba que seu pai não te ensinou!</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../img/barber_2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="../img/logo.png" height="35px" width="150px" alt="">
+                  <img src="../img/BLOG_BBR_teste.png" height="60px" alt="">
                   <p>Todo conteúdo sobre ideias, dicas e estilos de cortes de cabelo e barba!</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../img/barber_3.jpg" class="d-block w-100" alt="..."> 
                 <div class="carousel-caption d-none d-md-block">
-                  <img src="../img/logo.png" height="35px" width="150px" alt="">
+                  <img src="../img/BLOG_BBR_teste.png" height="60px" alt="">
                   <p>Novidades sobre o conteúdo de barba e cabelo masculino!!!</p>
                 </div>
               </div>
