--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -61,7 +61,7 @@
                 <p>Ou use seu Email para criar a conta</p>
 
                 <form action="POST">
-                    <input type="text" name="Nome" placeholder="Nome" required>
+                    <input type="text" name="Nome" placeholder="Nome" pattern="[a-z]*" required>
                     <input type="email" name="Email" placeholder="Email">   
                     <input type="password" name="Senha" placeholder="Senha">
                 </form>
