--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -60,16 +60,19 @@
 
                 <p>Ou use seu Email para criar a conta</p>
 
-                <form action="POST">
-                    <input type="text" name="Nome" placeholder="Nome" pattern="[a-z]*" required>
-                    <input type="email" name="Email" placeholder="Email">   
-                    <input type="password" name="Senha" placeholder="Senha">
+                <form>
+                    <input type="text" id="name" placeholder="Nome" pattern="[a-z]*" required>
+                    <input type="email" id="email" placeholder="Email" required>   
+                    <input type="password" id="password" placeholder="Senha" required>
                 </form>
 
-                <button>CADASTRAR</button>  
+                <button onclick="EnviarFormulario()">CADASTRAR</button>  
 
             </article>
         </section>  
     </main>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="../Js/teste.js"></script>
+  </body>
 </html>
