--- a/html/polaroid05.html
+++ b/html/polaroid05.html
@@ -129,7 +129,18 @@
                 </div>
         </section> <!-- /sidebar -->
         <footer>
-            <!-- Criar footer -->
+          <div class="footer-content">
+            <h3>BLOG <span>BBR</span></h3>
+            <p>BLOG BBR, seu blog sobre conteúdo masculino!</p>
+            <ul class="footer-social">
+              <li><a href="https://facebook.com"><img src="../img/facebook.png" height="30px" alt="face-logo"></a></li>
+              <li><a href="https://google.com"><img src="../img/google.png" height="30px" alt="google-logo"></a></li>
+              <li><a href="https://instagram.com"><img src="../img/instagram.png" height="30px" alt="insta-logo"></a></li>
+            </ul>
+          </div>
+          <div class="footer-copy">
+            <p>copyright &copy;2022 BLOG <span>BBR</span>.</p>
+          </div>
         </footer>
     </main> 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
