--- a/html/index.html
+++ b/html/index.html
@@ -164,6 +164,20 @@
           </section> <!-- /Blog-->
         </header>
         </main>
+        <footer>
+          <div class="footer-content">
+            <h3>BLOG <span>BBR</span></h3>
+            <p>BLOG BBR, seu blog sobre conteúdo masculino!</p>
+            <ul class="footer-social">
+              <li><a href="https://facebook.com"><img src="../img/facebook.png" height="30px" alt="face-logo"></a></li>
+              <li><a href="https://google.com"><img src="../img/google.png" height="30px" alt="google-logo"></a></li>
+              <li><a href="https://instagram.com"><img src="../img/instagram.png" height="30px" alt="insta-logo"></a></li>
+            </ul>
+          </div>
+          <div class="footer-copy">
+            <p>copyright &copy;2022 BLOG <span>BBR</span>.</p>
+          </div>
+        </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
