--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -54,7 +54,7 @@
 
                 <div class="social">
                     <img src="../img/facebook.png" alt="facebook">
-                    <img src="../img/facebook.png" alt="google">
+                    <img src="../img/google.png" alt="google">
                     <img src="../img/instagram.png" alt="Instagram">
                 </div>
 
